# cli

./: Cargo.toml  LICENSE
src/: binaries.rs  config.rs  install.rs  main.rs  resources.rs
