[package]
name = "rfproject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
sysinfo = "0.23.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0.136", features = ["derive"] }
