[package]
name = "rfproject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8"
raster = "0.2.0"
clap = { version = "3.0", features = ["derive"] }
sysinfo = "0.23.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "0.11.3", features = ["stream"] }
futures-util = "0.3.14"
indicatif = "0.15.0"
tokio = { version = "1.13.0", features = ["full"] }
